--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -8,8 +8,8 @@ on:
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest
-    timeout-minutes: 10  # Add timeout to prevent hanging
+    runs-on: ubuntu-latest-4-cores  # Use more powerful runner
+    timeout-minutes: 20  # Increase timeout
     steps:
       - uses: actions/checkout@v4  # Updated to latest version
         with:
@@ -23,7 +23,7 @@ jobs:
           extended: true
 
       - name: Build
-        run: hugo --minify
+        run: hugo --minify --timeout 300s
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v4
