--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest-8-cores  # Use more powerful runner
+    runs-on: ubuntu-latest  # Back to standard runner
     timeout-minutes: 20  # Increase timeout
     steps:
       - uses: actions/checkout@v4  # Updated to latest version
@@ -23,7 +23,7 @@ jobs:
           extended: true
 
       - name: Build
-        run: hugo --minify --timeout 300s
+        run: hugo --minify
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v4
